# AkamaiStaging

./: .flake8  .gitignore  .pylintrc  LICENSE  README.md  akamaistaging  akamaistaging.in  com.github.mclellac.AkamaiStaging.json  com.github.mclellac.AkamaiStaging.policy  com.github.mclellac.AkamaiStaging.policy.in  meson-postinstall.py  meson.build  pyproject.toml  requirements.txt  run_app_tests.py  setup.py  test_accent.py
akstaging/: __init__.py  akamaistaging.gresource  akamaistaging.gresource.xml  akamaistaging.in  aklib.py  akstaging_macos_helper.py  akstaging_root_helper.py  config.py.in  defs.py.in  dns_utils.py  helper_cli.py  hosts.py  i18n.py  meson.build  preferences.py  status_codes.py  window.py
akstaging/gtk/: help-overlay.blp  help-overlay.ui  style-dark.css  style.css  window.blp  window.cmb  window.css  window.ui
akstaging/tests/: test_hosts.py  test_window.py
data/: com.github.mclellac.AkamaiStaging.desktop.in  com.github.mclellac.AkamaiStaging.gschema.xml  com.github.mclellac.AkamaiStaging.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  akamaistaging.pot  fr.po  meson.build
tests/: test_after_cleanup.py  test_core_logic_fixes.py  test_critical_fixes_round2.py  test_final_pass.py  test_final_review.py  test_final_ui_updates.py  test_instantiation.py  test_instantiation_granular_perms.py  test_placeholder_fix.py  test_startup_fixes.py  test_ui_refactor_instantiation.py
tests/test_env/: hosts
